Fix truncated dollars function

--- a/packages/client/src/layout/recent-repayments.scss
+++ b/packages/client/src/layout/recent-repayments.scss
@@ -33,7 +33,7 @@
     }
 
     .transaction-date {
-      min-width: 54px;
+      min-width: 41px;
     }
 
     .transaction-portion {
